# ChangeLog for media-libs/gd
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gd/ChangeLog,v 1.41 2007/02/13 08:37:41 corsair Exp $

  13 Feb 2007; Markus Rothe <corsair@gentoo.org> gd-2.0.34.ebuild:
  Stable on ppc64; bug #141577

  12 Feb 2007; Bryan Østergaard <kloeri@gentoo.org> gd-2.0.34.ebuild:
  Stable on Alpha, bug 141577.

  12 Feb 2007; Gustavo Zacarias <gustavoz@gentoo.org> gd-2.0.34.ebuild:
  Stable on sparc wrt security #141577

  11 Feb 2007; Simon Stelling <blubb@gentoo.org> gd-2.0.34.ebuild:
  stable on amd64; security bug 141577

  11 Feb 2007; Bryan Østergaard <kloeri@gentoo.org> gd-2.0.34.ebuild:
  Stable on IA64, bug 141577.

  11 Feb 2007; René Nussbaumer <killerfox@gentoo.org> gd-2.0.34.ebuild:
  Stable on hppa. See bug #141577.

  11 Feb 2007; Tobias Scherbaum <dertobi123@gentoo.org> gd-2.0.34.ebuild:
  Stable on ppc wrt bug #141577.

  11 Feb 2007; Christian Faulhammer <opfer@gentoo.org> gd-2.0.34.ebuild:
  stable x86; security bug #141577

*gd-2.0.34 (07 Feb 2007)

  07 Feb 2007; Mike Frysinger <vapier@gentoo.org> +gd-2.0.34.ebuild:
  Version bump.

*gd-2.0.34_rc2 (03 Feb 2007)

  03 Feb 2007; Mike Frysinger <vapier@gentoo.org> +gd-2.0.34_rc2.ebuild:
  Version bump.

  23 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/gd-2.0.33-iconv.patch, gd-2.0.33.ebuild:
  Add patch to link against libiconv when needed.

  23 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> gd-2.0.33.ebuild:
  Add ~x86-fbsd keyword.

  22 Dec 2005; Michael Hanselmann <hansmi@gentoo.org> gd-2.0.33.ebuild:
  Stable on ppc.

  21 Dec 2005; Marcus D. Hanwell <cryos@gentoo.org> gd-2.0.33.ebuild:
  Stable on amd64, bug 112937.

  21 Dec 2005; Gustavo Zacarias <gustavoz@gentoo.org> gd-2.0.33.ebuild:
  Stable on sparc wrt security #112937

  21 Dec 2005; Fernando J. Pereda <ferdy@gentoo.org> gd-2.0.33.ebuild:
  stable on alpha as per bug #112937
